<?xml version="1.0"?>
<package format="2">
  <name>sitc_ak_driver</name>
  <version>0.0.0</version>
  <description>The sitc_ak_driver package</description>
  <maintainer email="mail@marinaaoki.com">Marina Aoki</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/marinaaoki/sitc-ak-driver.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
